css/07-sub-header.less
@import "variables.less";

.sub-header {
  font-family: "OpenSans", Helvetica, Arial, sans-serif;
  z-index: 999;
  top: 0;

  .search-box {
    height: @mulesoft-toolbar-height;
    background: @mulesoft-light-blue;
    color: white;
    padding: 19px 0px 0px 20px;

    i{
      margin-right: 10px;
      font-size: 18px;
    }

    i.glyphicon:before {
      content:"";
      display: inline-block;
      width: 20px;
      height: 20px;

    }

    i.glyphicon-search {
      top: 3px;
    }
    i.glyphicon-search:before{
      background: url('../img/search.svg') center 2px  no-repeat;
    }

    .search-field {
      background: transparent;
      border: none;
      width: 80%;
      border-bottom: 0px;
      font-size: 13px;
      padding: 5px 0;

      &:focus{
        outline: 0;
        border-bottom: 0px;
      }
      &:hover {
        border-bottom: 0px;
      }

      &::-webkit-input-placeholder {
        color: rgba(255,255,255,.8);
      }
      &:-moz-placeholder {
        color: rgba(255,255,255,.8);
      }
      &:-ms-input-placeholder {
        color: rgba(255,255,255,.8);
      }
    }
    input[type=submit] {
      display: none;
    }

  }
  .toolbar {
    height: @mulesoft-toolbar-height;
    background: white;
    border-bottom: 1px solid #DBDBDB;
    padding: 17px 20px 20px 20px;
    padding-right: 0;
    text-align: left;
    font-size: 13px;
    color: @mulesoft-dark-grey;

    .toolbar-dropdown {
      display: inline-block;

      .btn {
        padding: 0;
        font-size: 13px !important;
        color: @mulesoft-dark-grey;
        span {
          font-size: 13px !important;
        }
      }

      .dropdown-toggle {
        margin: 7px 10px;
        border: none;
        background: transparent;
        position: relative;
        &:active, &:focus {
          outline: 0;
          box-shadow: none;
        }
        &:hover {
          color:@mulesoft-really-dark-grey;
        }
        ul {
          margin: 0;
          list-style: none;
        }
      }

      .dropdown-menu {
        padding: 0 15px 15px 15px;
        position: absolute;
        top: 100%;
        z-index: 1000;
        margin: 0px;
        font-size: 14px;
        text-align: left;
        list-style: none;
        background-color: #fff;
        -webkit-background-clip: padding-box;
        background-clip: padding-box;
        //border: 1px solid @mulesoft-semidark-grey;
        border: 0;
        border-radius: 0;
        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
        box-shadow: 0 6px 12px rgba(0,0,0,.175);
        font-family: "OpenSans";
        font-size: 13px;
      }
      &.show-hide-sidebar {
        vertical-align: middle;
        a.tree-icon {
          font-family: "OpenSans", Helvetica, Arial, sans-serif;
          display: inline;
          float: left;
          padding-right: 10px;
          border-right: 1px solid white;
          color: #58595a;
          line-height: 1.1;
          vertical-align: top;
          text-decoration: none;
        }
        .tree-icon.glyphicon-th-list:before{
          content:"";
          background: url('../img/nav-hide.svg') center top  no-repeat;
          background-size: 105%;
          display: inline-block;
          width: 17px;
          height: 18px;
          vertical-align: middle;
          margin-right: 5px;
          margin-top: -4px;
          opacity: .5;
        }
        .tree-icon.glyphicon-th-list.tree-closed:before{
          background: url('../img/nav-show.svg') center top  no-repeat;
          background-size: 105%;
          opacity: .5;
        }
        .tree-icon.glyphicon-th-list:hover:before,
        .tree-icon.glyphicon-th-list.tree-closed:hover:before{
          opacity: .7;
        }
      }
      &.helpful {
        position: relative;
        .dropdown-menu {
          left: -68px;
          top: -17px;
          padding-top: 69px;
        }
        i.star, i.star-empty {
          background: left center no-repeat;
          width: 15px;
          height: 15px;
          display: inline-block;
          cursor: pointer;
        }
        i.star, i.star-empty:hover {
          background-image: url('../img/blue-star.svg');
          opacity: 1;
        }
        i.star-empty {
          background-image: url('../img/black-star.svg');
          opacity: 0.5;
        }
        li {
          margin-bottom: 0;
          &:first-child {
            i.star, i.star-empty {
              background-size: 15px 15px;
              float: left;
              width: 1.415em;
            }
            i:last-child {
              width: 15px;
            }
          }
        }
        .btn {
          border: 0;
          border-radius: 0;
          outline: 0;
          &:active, &:focus {
            outline: 0;
          }
        }
        .thankyou-message {
          p {
            color: #5a595a;
            border-top: 1px solid #DBDBDB;
            font-size: 1.7em;
            line-height: 1;
            margin-bottom: 0;
            padding: 2em 0;
            text-align: center;
          }
          .btn {
            color: #6b6c6b;
            display: block;
            font-size: 14px !important;
            margin: 0 auto 5px auto;
            &:hover, &:active, &:focus {
              background-color: transparent;
              box-shadow: none;
            }
          }
        }
        .thankyou-message p, textarea {
          width: 220px;
        }
        textarea {
          border-radius: 0;
        }
        .btn-group {
          display: -ms-flexbox;
          display: -webkit-flex;
          display: flex;
          input.btn {
            width: 50%;
          }
        }
        input.btn {
          line-height: inherit;
          padding: 5px 10px;
          &.btn-default:focus, &.btn-default:hover {
            background-color: transparent;
          }
          &.btn-primary {
            background-color: #999a9c;
            color: #fff;
          }
        }
      }

      //&.export{
      //  .dropdown-menu{
      //    left: 245px;
      //    li:first-child {
      //      margin-top: -15px;
      //    }
      //  }
      //  i.glyphicon-log-out:before{
      //    background: url('../img/link.svg') center 2px no-repeat;
      //  }
      //}

      &.edit-github{
        a{
          display: inline-block;
          text-decoration: none;
          padding: 3px 10px 5px 10px;
          vertical-align: middle;
          color: @mulesoft-dark-grey;

          .github-icon{
            display: inline-block;
            width: 16px;
            height: 16px;
            margin-right: 10px;
            opacity: .5;
          }
          span {
            vertical-align: middle;
          }
          &:hover{
            color:@mulesoft-really-dark-grey;
            &:before {
              opacity: .7;
            }
            .github-icon{
              opacity: .75;
            }
          }
          &:before {
            content: "";
            display: inline-block;
            background: url('../img/github-icon.png') center center no-repeat;
            background-size: 100%;
            opacity: .5;
            width: 16px;
            height: 16px;
            margin-right: 8px;
            margin-top: 3px;
            vertical-align: top;
          }
        }

      }/* /edit-github */
    }/* /toolbar-dropdown */

  }

  .version-selector{
    font-size: 13px;
    background: white;
    border-bottom: 1px solid #DBDBDB;
    text-align: right;
    padding: 16px 0px 0px 28px;
    height: @mulesoft-toolbar-height;
    display: block;

    label{
      font-weight: normal;
      color: @mulesoft-dark-grey;
      margin-right: 10px;
    }
    select {
      width: auto;
      appearance: none;
      -webkit-appearance: none;
      -moz-appearance: none;
      border: none;
      border-radius: 0;
      padding: 7px 30px 7px 10px;
      background: @mulesoft-light-grey url('../img/nav-expand.svg') 90% 55% no-repeat;
      background-size: 18px;
      color: @mulesoft-dark-grey;
      text-align: left;
      //option {
      //  text-align: right; // only works in Firefox
      //}
      &:focus {
        outline: 0;
      }
    }
  }
}

// NOTE setting margin-top on .row is smoother than setting it on .container
.affixed-sub-header .sub-header + .row {
  margin-top: @mulesoft-toolbar-height;
}

@media (max-width: 992px) {
  .affixed-sub-header .sub-header + .row {
    margin-top: @mulesoft-toolbar-height * 2;
  }

  .sub-header {
    .show-hide-sidebar a.tree-icon:before {
      background-image: url('../img/nav-menu.svg') !important;
      margin-top: 0 !important;
    }

    .search-box{
      .search-field {
        padding-top: 0;
        &:hover {
          border-bottom: 0px;
        }
      }
      &.fullwidth{
        width:100%;
      }

    }
    .toolbar{
      border-bottom: 1px solid white;
      font-size: 13px;


      .toolbar-dropdown{

        .btn {
          padding: 5px 0;
          margin-left: 0;
          margin-right: 0;
          font-size: 13px !important;
          span {
            font-size: 13px !important;
          }
        }

        span,
        .dropdown-toggle span{
          display: none;
        }

        a{
          padding-left: 0!important;
          padding-right: 0 !important;
        }

        .dropdown-toggle i{
          margin-right: 0px;
        }
        &.edit-github span{
          display: none;
        }
        //&.export .dropdown-menu,
        &.helpful .dropdown-menu {
          right: -15px;
          left: auto;
        }
      }

      &.hidecontent{
        display: none;
      }
    }

    .version-selector {
      //text-align: right;
      //padding-right: 10px;
      select {
        width: auto;
        padding: 7px 20px 7px 7px;
        background-size: 16px;
        background-position: 95% 55%;
      }
      &.hidecontent {
        display: none;
      }
    }
  }
}
.st-ui-result .st-ui-type-heading {
  font-size: 13px !important;
}
div.st-ui-autocomplete div.st-query-present a.st-ui-result .st-ui-type-detail {
  font-size: 11px !important;
}

